@@ -6,6 +6,7 @@ Bug fixes:
 - PR#5712: some documentation problems
 - PR#5718: false positive on 'unused constructor' warning
 - PR#5719: ocamlyacc generates code that is not warning 33-compliant
+- PR#5735: %apply and %revapply not first class citizens
 
 OCaml 4.00.0:
 -------------
